_chinwag.scss
/* ... */
.noTopic{
    font-size: 16px;
    padding: 15px 0 0 0;
    float: left;
    .close-button{
        background: $semi-secondary !important;
        padding: 5px 10px !important;
        border-radius: 50% !important;
        margin: -5px 0 0 20px !important;
        float: right !important;
        i{
            color: $base-color !important;
            font-size: $font-size-h4 !important;
        }
    }
}
.online-td{
    span{
        margin: -4px 0 0 5px;
        float: left;
    }
}

//////////////////////////////////////////// Medium Media Query Starts Here ////////////////////////////////////////////
@media (min-width: $screen-md-min) and (max-width: $screen-md-max) {}
//////////////////////////////////////////// Medium Media Query Ends Here //////////////////////////////////////////////

//////////////////////////////////////////// Small Media Query Starts Here /////////////////////////////////////////////
@media (min-width: $screen-sm-min) and (max-width: $screen-sm-max){
    .chinwag .chat-box {
        height: calc(100vh - 60px);
        max-height: none;
        z-index: 999;
        bottom: 0;
        right: 0;
        width: 50%;
        max-width: 50%;
    }
    .chinwag .chat-window-parent .chat .message-list {
        height: calc(100vh - 260px);
    }
    .chinwag .chat-window-parent .chat.topic-select .message-list {
        height: calc(100vh - 320px);
    }
    .chinwag .chat-window-parent .chat .input-panel .button-group a {
        padding: 8.2px 15px;
    }
    .chinwag .tab-content.card-panel #chats .chat-list .list-group {
        height: calc(100vh - 100px);
    }
    .chinwag .chat-window-parent #contacts .chat-list .list-group {
        height: calc(100vh - 140px);
    }
    .chinwag .chat-box {
        width: 100%;
        max-width: 100%;
        position: fixed;
        margin: 0;
        bottom: 0;
        top: 100%;
        right: 0;
        left: 0;
        height: 100%;
        z-index: 999;
        min-height: 100%;
        background: #ffffff;
        &.opened {
            top: 0;
        }
    }
    .chinwag-status-dropdown{
        bottom: auto !important;
        position: fixed;
        left: 10px;
        width: 30%;
        margin-top: 5px;
    }
    .chinwag-status-dropdown li table tr td span{
        margin: -4px 0 0 5px;
        float: left;
    }
    .chinwag .chat-window-parent .chat .input-panel .button-group .send{
        -webkit-transform: rotate(180deg);
    }
    .chinwag .chat-window-parent .chat .input-panel .button-group .send i{
        left: -2px;
    }
    .chinwag .chat-box .header .chinwag-user-status .chinwag-status-description .delete-btn-class i {
        margin: 0 0 0 -8px;
    }
    .chinwag .chat-box .header .chinwag-user-status .chinwag-status-description .check-btn-class i {
        margin-left: -8px;
    }
    .chinwag .chat-box .header{
        position: relative;
        overflow: hidden;
    }
}
/* ... */

